<resources>
    <string name="app_name">ITI_GP_Driver</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="invalid">Invalid credentials</string>
    <string name="wait">Please wait..</string>
    <string name="wassal">Wassal</string>
    <!--login strings-->
    <string name="signIn">Sign in</string>
    <string name="forgotPasswor">Forgot my password</string>
    <string name="login">Login</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="registerNow">\tregister now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!--navigation drawer-->
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--navigation menu-->
    <string name="home">Home</string>
    <string name="myHistory">My History</string>
    <string name="aboutUs">About us</string>
    <string name="termsAndConditions">Terms and conditions</string>
    <string name="about">About</string>
    <!--error messages-->
    <string name="wrongMsg">Something went wrong! please check internet connection..</string>
    <string name="title_activity_maps">Map</string>


</resources>
